# Projeto_Final_Python_na_Fisica

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 1_Fundamentos_&_Codigos.md  Semana1_Teoria_+_codes.md
gcm/: __init__.py  analysis.py  core.py  maps.py  metrics.py
notebooks/: 00_fig1_teoria.ipynb  00_model_check.ipynb  01_um_mapa_explorer.ipynb  02_varredura_eps_sigma_M_persistencia.ipynb  03_quenches_histerese.ipynb  04_Todos_Juntos.ipynb
notebooks/data/: 03_hist_coexistencia.json  A_sync_estacionario_stats.json  B_sync_caotico_stats.json  Mbar_vs_eps_mu1.9.json  eps_scan_mu1.9.csv  eps_scan_mu1.9.json  finite_time_lyapunov_single_index.json  mu_eps_points_classified.json  p_t_mu1.9.json  scan_eps_p_sigma_M_mu1.9.csv  scan_eps_sigma_mu1.9.csv  single_index_traces_stats.json  theory_bounds_mu_eps.json  theory_bounds_mu_eps_full.json  week3_ramp_mu1.9.json  week3_ramp_mu1.9_2.json
tests/: progressive_quick.py  test_analysis.py  test_core.py  test_maps.py  test_metrics.py
tests/data/: scan_eps_quick_repo.csv
tests/test_analysis/data/: scan_eps_quick.csv
