[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "Projeto Final - Python na Física"
version = "0.1.0"
description = "Synchronization & phase ordering in globally coupled chaotic maps, with bridges to FOPT/GW"
readme = "README.md"
requires-python = ">=3.11"
authors = [
{ name = "Igor Stellet" }
]
license = { text = "MIT" }
keywords = ["chaos", "synchronization", "coupled maps", "first-order phase transitions", "gravitational waves"]
classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"License :: OSI Approved :: MIT License",
"Topic :: Scientific/Engineering :: Physics",
]


# Minimal runtime deps (expand as needed)
dependencies = [
"numpy>=1.26",
"scipy>=1.11",
"matplotlib>=3.8",
"tqdm>=4.66"
]


[project.optional-dependencies]
dev = [
"pytest>=8",
"pytest-cov>=5",
"mypy>=1.11",
"ruff>=0.6",
"black>=24.3",
"nbmake>=1.5",
"nbqa>=1.8",
"jupyter>=1.0",
"ipykernel>=6.29",
"pre-commit>=3.7"
]


[tool.setuptools.packages.find]
where = ["."]
branch = true