[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-final-python-na-fisica"
version = "0.1.0"
description = "Caos em mapas globalmente acoplados e conexões com FOPT → GWs (Projeto Final)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Igor Stellet" }]
license = { text = "MIT" }
keywords = ["caos", "sincronização", "mapas acoplados", "FOPT", "ondas gravitacionais"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "nbmake>=1.5",
  "jupyter>=1.0",
  "ipykernel>=6.29"
]

